# mechinterp

./: README.md  pyproject.toml  requirements.txt  tuned_lens.ipynb  upload.sh  vo_project.ipynb
demos/: lenses.ipynb  mini_tools.ipynb  patchscopes.ipynb
mechinterp/: Interpreter.py  ModelVector.py  __init__.py  internal_utils.py  mini_tools.py  utils.py
tests/: test.py  test_internal_utils.py  test_interpreter.py
